Add tasks upload with Excel and gRPC
