# export-server/src/types/upload.types.ts
@@ -12,3 +12,18 @@ export interface UploadExcelResponse {
     failureCount: number;
     failedRows: FailedRow[];
 }
+
+export interface UploadTaskExcelRequest {
+  file: Buffer;
+}
+
+export interface UploadTaskExcelResponse {
+  successCount: number;
+  failureCount: number;
+  failedRows: FailedRow[];
+}
+
+export interface FailedRow {
+  rowNumber: number;
+  reason: string;
+}
